fix: align btn ui

--- a/client/styles.css
+++ b/client/styles.css
@@ -79,10 +79,13 @@ input {
   button {
     cursor: pointer;
     height: 56px;
-    padding: 12px;
+    padding: 32px;
     font-size: 24px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
-
   .inner-overlay {
     display: flex;
     flex-direction: column;
